Colorize other panels

--- a/index.html
+++ b/index.html
@@ -644,6 +644,8 @@ $('#thing').waypoint('alert', 'Foo: ');
       <div class="notifications"></div>
     </div>
 
+    <p class="footer">A project of <a href="http://imakewebthings.com">I Make Web Things</a></p>
+
     <script src="jquery.js"></script>
     <script src="waypoints.js"></script>
     <script src="index.js"></script>
