Sticky shortcut colorization

--- a/shortcuts/infinite-scroll/index.html
+++ b/shortcuts/infinite-scroll/index.html
@@ -9,15 +9,6 @@
 
   <link href='http://fonts.googleapis.com/css?family=Ubuntu+Mono|Lato:400,700|PT+Serif:700' rel='stylesheet' type='text/css'>
   <style type="text/css">
-    .ref {
-      /*
-      base: #d5c5e5;
-      light: #eae2f2;
-      dark: #6a6272;
-      darkest: #444a50;
-      */
-    }
-
     * {
       margin:0;
       padding:0;
@@ -122,7 +113,7 @@
       color:#939;
     }
 
-    p code, li code, dd code {
+    p code, li code, dl code {
       padding:0 2px;
       background:#eae2f2;
     }
