--- a/examples/dial-controls/index.html
+++ b/examples/dial-controls/index.html
@@ -7,6 +7,7 @@
 	<meta name="description" content="An example of dial controls using the jQuery Waypoints plugin">
 	<meta name="viewport" content="width=480">
 
+	<link href='http://fonts.googleapis.com/css?family=Ubuntu+Mono|Lato:400,700|PT+Serif:700' rel='stylesheet' type='text/css'>
 	<style type="text/css">
 		* {
 			margin:0;
@@ -16,10 +17,10 @@
 		body {
 			font-size:16px;
 			line-height:1.5;
-			color:#000;
-			background:#fff;
-			padding-bottom:16px;
-			font-family:"Helvetica Neue", sans-serif;
+			color:#6a6272;
+      background:#d5c5e5;
+      padding-bottom:16px;
+      font-family:"Lato", sans-serif;
 		}
 
 		.inner {
@@ -28,24 +29,29 @@
 			margin:0 auto;
 		}
 
+		h1, h2, h3, h4 {
+      font-family:"PT Serif", serif;
+      font-weight:normal;
+    }
+
 		h1 {
-			font-size:54px;
+			font-size:53px;
+      color:#444a50;
 		}
 
 		h2 {
-			text-align:center;
-			background:#000;
-			color:#fff;
-			font-size:24px;
-		}
+      text-align:center;
+      background:#6a6272;
+      color:#eae2f2;
+      font-size:24px;
+    }
 
 		pre {
-			white-space:pre-wrap;
-			font-size:12px;
-			font-family:Consolas, "Bitstream Vera Sans Mono", "Andale Mono", Monaco, "DejaVu Sans Mono", "Lucida Console", monospace;
-			border:1px solid #000;
-			padding:10px;
-		}
+      white-space:pre-wrap;
+      font-size:14px;
+      background:#fff;
+      padding:10px;
+    }
 
 		.header {
 			margin-bottom:24px;
@@ -73,7 +79,7 @@
 
 		.dial ul {
 			background:#fff;
-			border:1px solid #bbb;
+			border:1px solid #eae2f2;
 			padding:25px 0 114px 0;
 			height:1px;
 			overflow-y:scroll;
@@ -107,6 +113,10 @@
 			border-top:1px solid #ddd;
 		}
 
+		.text-color-dial li {
+			color:#fff;
+		}
+
 		li[data-value="8px"] {
 			font-size:8px;
 		}
@@ -128,20 +138,20 @@
 		li[data-value="14px"] {
 			font-size:14px;
 		}
-		li[data-value="#fff"] {
-			background:#fff;
+		li[data-value="#000"] {
+			background:#000;
 		}
-		li[data-value="#eee"] {
-			background:#eee;
+		li[data-value="#222"] {
+			background:#222;
 		}
-		li[data-value="#ddd"] {
-			background:#ddd;
+		li[data-value="#444"] {
+			background:#444;
 		}
-		li[data-value="#ccc"] {
-			background:#ccc;
+		li[data-value="#666"] {
+			background:#666;
 		}
-		li[data-value="#bbb"] {
-			background:#bbb;
+		li[data-value="#888"] {
+			background:#888;
 		}
 		li[data-value="#aaa"] {
 			background:#aaa;
@@ -157,8 +167,6 @@
 		}
 
 		#example-target {
-			background:#000;
-			color:#fff;
 			margin-top:32px;
 		}
 	</style>
@@ -201,14 +209,14 @@
 			<div class="indicator"></div>
 		</div>
 		
-		<div data-property="color" class="dial">
+		<div data-property="color" class="dial text-color-dial">
 			<h3>Text Color:</h3>
 			<ul>
-				<li data-value="#fff">#fff</li>
-				<li data-value="#eee">#eee</li>
-				<li data-value="#ddd">#ddd</li>
-				<li data-value="#ccc">#ccc</li>
-				<li data-value="#bbb">#bbb</li>
+				<li data-value="#000">#000</li>
+				<li data-value="#222">#222</li>
+				<li data-value="#444">#444</li>
+				<li data-value="#666">#666</li>
+				<li data-value="#888">#888</li>
 				<li data-value="#aaa">#aaa</li>
 			</ul>
 			<div class="indicator"></div>
@@ -219,26 +227,25 @@
   var $active = $(this);
   var property, value;
 
-	/* The waypoint is triggered at the top of each list item representing a dial section. When triggering in the down direction we want to use the dial section the waypoint is attached to. But in the up direction we want to use the previous dial section. */
-	if (direction === "up") {
-		$active = $active.waypoint('prev', 'vertical', 'ul');
-	}
+  /* The waypoint is triggered at the top of each list item representing a dial section. When triggering in the down direction we want to use the dial section the waypoint is attached to. But in the up direction we want to use the previous dial section. */
+  if (direction === "up") {
+    $active = $active.prev();
+  }
 
-	/* If we triggered in the up direction and the result from 'prev' came back with an empty set of elements, it means we were on the first element in the list, and we should just use the original element. */
-	if (!$active.length) {
-		$active = $(this);
-	}
+  /* If we triggered in the up direction and the result from 'prev' came back with an empty set of elements, it means we were on the first element in the list, and we should just use the original element. */
+  if (!$active.length) {
+    $active = $(this);
+  }
 
-	/* The property the dial controls is a data attribute on the ul. */
-	property = $active.closest('.dial').data('property');
+  /* The property the dial controls is a data attribute on the ul. */
+  property = $active.closest('.dial').data('property');
 
-	/* The value for that property is a data attribute on each li. */
-	value = $active.data('value');
+  /* The value for that property is a data attribute on each li. */
+  value = $active.data('value');
 	
-	$('#example-target').css(property, value);
+  $('#example-target').css(property, value);
 }, {
-	offset: 25, // How far the indicator is from the top of the ul.
-	context: 'ul' // Make the scroll context the nearest ul.
+  context: 'ul' // Make the scroll context the nearest ul.
 });</code></pre>
 </div>
 
@@ -256,7 +263,7 @@ $(function() {
 		   the dial section the waypoint is attached to. But in the up direction
 		   we want to use the previous dial section. */
 		if (direction === "up") {
-			$active = $active.waypoint('prev', 'vertical', 'ul');
+			$active = $active.prev();
 		}
 
 		/* If we triggered in the up direction and the result from 'prev' came
@@ -274,7 +281,6 @@ $(function() {
 		
 		$('#example-target').css(property, value);
 	}, {
-		offset: 26, // How far the indicator is from the top of the ul.
 		context: 'ul' // Make the scroll context the nearest ul.
 	});
 
