--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>jQuery Waypoints</title>
-    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=640">
     <link href='http://fonts.googleapis.com/css?family=Ubuntu+Mono|Lato:400,700|PT+Serif:700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="styles.css">
   </head>
