--- a/shortcuts/infinite-scroll/index.html
+++ b/shortcuts/infinite-scroll/index.html
@@ -3,8 +3,8 @@
 <html lang="en-US">
 <head>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-  <title>jQuery Waypoints Sticky Shortcut</title>
-  <meta name="description" content="A jQuery Waypoints shortcut extension for easier sticky elements">
+  <title>jQuery Waypoints Infinite Shortcut</title>
+  <meta name="description" content="A jQuery Waypoints shortcut extension for easier infinite scrolling">
   <meta name="viewport" content="width=480">
 
   <link href='http://fonts.googleapis.com/css?family=Ubuntu+Mono|Lato:400,700|PT+Serif:700' rel='stylesheet' type='text/css'>
