--- a/test/index.html
+++ b/test/index.html
@@ -8,61 +8,19 @@
 	<script src="lib/jasmine-html.js"></script>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js"></script>
 	<script src="lib/jasmine-jquery.js"></script>
-  <script src="lib/coffee-script.js"></script>
+	<script src="lib/coffee-script.js"></script>
+	<script src="lib/testloader.js"></script>
 
 	<!-- include source files here... -->
 	<script src="../waypoints.js"></script>
-  <script src="../shortcuts/infinite-scroll/waypoints-infinite.js"></script>
-  <script src="../shortcuts/sticky-elements/waypoints-sticky.js"></script>
+	<script src="../shortcuts/infinite-scroll/waypoints-infinite.js"></script>
+	<script src="../shortcuts/sticky-elements/waypoints-sticky.js"></script>
 
-	<script type="text/javascript">
-    (function() {
-      var jasmineEnv = jasmine.getEnv();
-      jasmineEnv.updateInterval = 1000;
-
-      var htmlReporter = new jasmine.HtmlReporter();
-
-      jasmineEnv.addReporter(htmlReporter);
-
-      jasmineEnv.specFilter = function(spec) {
-        return htmlReporter.specFilter(spec);
-      };
-
-      var currentWindowOnload = window.onload;
-
-      window.onload = function() {
-        var count = 0;
-        var loadCoffee = function(files) {
-          for (var i = 0, len = files.length; i < len; i++) {
-            count++;
-            CoffeeScript.load(files[i], function() {
-              count--;
-              if (!count) {
-                jasmine.getFixtures().fixturesPath = 'fixtures';
-                execJasmine();
-              }
-            });
-          }
-        };
-
-        if (currentWindowOnload) {
-          currentWindowOnload();
-        }
-        loadCoffee([
-          'waypoints.coffee',
-          'infinite.coffee',
-          'sticky.coffee'
-        ]);
-      };
-
-      function execJasmine() {
-        jasmineEnv.execute();
-      }
-
-    })();
-  </script>
+	<!-- setup env and run tests -->
+	<script>
+		testLoader();
+	</script>
 </head>
 
-<body>
-</body>
+<body></body>
 </html>
