Update sticky page for unsticky function, version bump

--- a/shortcuts/sticky-elements/index.html
+++ b/shortcuts/sticky-elements/index.html
@@ -188,6 +188,10 @@
 	<pre><code><span class="fn">$</span>(<span class="str">'.my-sticky-element'</span>).<span class="fn">waypoint</span>(<span class="str">'sticky'</span>, {
   <span class="key">offset</span>: 30 <span class="cm">// Apply "stuck" when element 30px from top</span>
 });</code></pre>
+
+  <p>If you would like to destroy a sticky shortcut you can pass waypoints the "unsticky" string.</p>
+
+  <pre><code><span class="fn">$</span>(<span class="str">'.my-sticky-element'</span>).<span class="fn">waypoint</span>(<span class="str">'unsticky'</span>);</code></pre>
 </div>
 
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js"></script>
