--- a/test/AMD.html
+++ b/test/AMD.html
@@ -4,9 +4,6 @@
 <head>
 	<title>Waypoints AMD Test Runner</title>
 	<link rel="stylesheet" type="text/css" href="lib/jasmine.css">
-	<script src="lib/jasmine.js"></script>
-	<script src="lib/jasmine-html.js"></script>
-	<script src="lib/jasmine-jquery.js"></script>
 	<script src="lib/coffee-script.js"></script>
 	<script src="lib/require.js"></script>
 	<script src="lib/testloader.js"></script>
@@ -16,10 +13,18 @@
 			baseUrl: '../',
 			paths : {
 				jquery : 'http://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min',
-				waypoints: 'waypoints'
-			}
+				waypoints: 'waypoints',
+        jasmine: 'test/lib/jasmine',
+        'jasmine-html': 'test/lib/jasmine-html',
+        'jasmine-jquery': 'test/lib/jasmine-jquery'
+			},
+      shim: {
+        jasmine: [],
+        'jasmine-html': ['jasmine'],
+        'jasmine-jquery': ['jquery', 'jasmine']
+      }
 		});
-		require(['jquery', 'waypoints', 'shortcuts/infinite-scroll/waypoints-infinite', 'shortcuts/sticky-elements/waypoints-sticky'], function(){
+		require(['jquery', 'waypoints', 'jasmine', 'jasmine-html', 'jasmine-jquery', 'shortcuts/infinite-scroll/waypoints-infinite', 'shortcuts/sticky-elements/waypoints-sticky'], function(){
 			testLoader();
 		});
 	</script>
