--- a/test/index.html
+++ b/test/index.html
@@ -1,26 +1,44 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
-  "http://www.w3.org/TR/html4/loose.dtd">
+<!doctype html>
 <html>
 <head>
-	<title>Jasmine Test Runner</title>
-	<link rel="stylesheet" type="text/css" href="lib/jasmine.css">
-	<script src="lib/jasmine.js"></script>
-	<script src="lib/jasmine-html.js"></script>
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js"></script>
-	<script src="lib/jasmine-jquery.js"></script>
-	<script src="lib/coffee-script.js"></script>
-	<script src="lib/testloader.js"></script>
-
-	<!-- include source files here... -->
-	<script src="../waypoints.js"></script>
-	<script src="../shortcuts/infinite-scroll/waypoints-infinite.js"></script>
-	<script src="../shortcuts/sticky-elements/waypoints-sticky.js"></script>
-
-	<!-- setup env and run tests -->
-	<script>
-		testLoader();
-	</script>
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Waypoints Test Runner (Mocha)</title>
+<link rel="stylesheet" type="text/css" href="../bower_components/mocha/mocha.css">
+<style type="text/css">
+#fixtures {
+  position:absolute;
+  left:0;
+  top:0;
+}
+</style>
 </head>
 
-<body></body>
+<body>
+<div id="mocha"></div>
+
+<script src="../bower_components/mocha/mocha.js"></script>
+<script src="../bower_components/chai/chai.js"></script>
+<script src="../bower_components/fixtures/fixtures.js"></script>
+<script src="../bower_components/lodash/dist/lodash.js"></script>
+
+<script type="text/javascript">
+mocha.setup('bdd')
+fixtures.path = 'fixtures'
+window.expect = chai.expect
+</script>
+<script src="eventually.js"></script>
+<script src="waypoints-spec.js"></script>
+
+<script>
+if (window.mochaPhantomJS) {
+  mochaPhantomJS.run();
+}
+else {
+  mocha.run();
+}
+</script>
+
+</body>
 </html>
