--- a/index.html
+++ b/index.html
@@ -3,6 +3,24 @@ layout: default
 top_level_section: about
 ---
 
-<main>
-  <h2>About</h2>
+<main class="about-main">
+  <p>Waypoints is the easiest way to trigger a function when you scroll to an element.</p>
+
+{% highlight js %}
+var waypoint = new Waypoint({
+  element: document.getElementById('#waypoint'),
+  handler: function(direction) {
+    console.log('Scrolled to waypoint!')
+  }
+})
+{% endhighlight %}
+
+  <p>It comes in jQuery, Zepto, and no-framework flavors.</p>
+  <p><a href="https://github.com/imakewebthings/waypoints/zipball/latest" class="large-button">Download Now</a></p>
+  <p class="or">or</p>
+  <pre class="one-liner"><code>bower install waypoints</code></pre>
+  <p class="or">or</p>
+  <pre class="one-liner"><code>npm install waypoints</code></pre>
+  <p class="or">or</p>
+  <p><a href="https://github.com/imakewebthings/waypoints" class="large-button">View on GitHub</a></p>
 </main>
