--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@ top_level_section: about
 ---
 
 <main class="about-main">
-  <p>Waypoints is the easiest way to trigger a function when you scroll to an element.</p>
+  <section class="introduction">
+    <p>Waypoints is the easiest way to trigger a function when you scroll to an element.</p>
 
 {% highlight js %}
 var waypoint = new Waypoint({
@@ -15,12 +16,15 @@ var waypoint = new Waypoint({
 })
 {% endhighlight %}
 
-  <p>It comes in jQuery, Zepto, and no-framework flavors.</p>
-  <p><a href="https://github.com/imakewebthings/waypoints/zipball/latest" class="large-button">Download Now</a></p>
-  <p class="or">or</p>
-  <pre class="one-liner"><code>bower install waypoints</code></pre>
-  <p class="or">or</p>
-  <pre class="one-liner"><code>npm install waypoints</code></pre>
-  <p class="or">or</p>
-  <p><a href="https://github.com/imakewebthings/waypoints" class="large-button">View on GitHub</a></p>
+    <p>It comes in jQuery, Zepto, and no-framework flavors.</p>
+  </section>
+  <section class="download">
+    <p><a href="https://github.com/imakewebthings/waypoints/zipball/latest" class="large-button">Download Now</a></p>
+    <p class="or">or</p>
+    <pre class="one-liner"><code>bower install waypoints</code></pre>
+    <p class="or">or</p>
+    <pre class="one-liner"><code>npm install waypoints</code></pre>
+    <p class="or">or</p>
+    <p><a href="https://github.com/imakewebthings/waypoints" class="large-button">View on GitHub</a></p>
+  </section>
 </main>
