notify waypoints for getting started guide

--- a/guides/getting-started/index.html
+++ b/guides/getting-started/index.html
@@ -21,7 +21,7 @@ subsection: getting-started
 <div class="waypoint" id="useless-waypoint">
 {% highlight js %}
 var waypoint = new Waypoint({
-  element: document.getElementById('#useless-waypoint')
+  element: document.getElementById('useless-waypoint')
 })
 {% endhighlight %}
 </div>
@@ -31,7 +31,7 @@ var waypoint = new Waypoint({
 <div class="waypoint" id="basic-waypoint">
 {% highlight js %}
 var waypoint = new Waypoint({
-  element: document.getElementById('#basic-waypoint'),
+  element: document.getElementById('basic-waypoint'),
   handler: function() {
     notify('Basic waypoint triggered')
   }
@@ -46,7 +46,7 @@ var waypoint = new Waypoint({
 <div id="direction-waypoint" class="waypoint">
 {% highlight js %}
 var waypoint = new Waypoint({
-  element: document.getElementById('#direction-waypoint'),
+  element: document.getElementById('direction-waypoint'),
   handler: function(direction) {
     notify('Direction: ' + direction)
   }
@@ -61,7 +61,7 @@ var waypoint = new Waypoint({
 <div id="px-offset-waypoint" class="waypoint">
 {% highlight js %}
 var waypoint = new Waypoint({
-  element: document.getElementById('#px-offset-waypoint'),
+  element: document.getElementById('px-offset-waypoint'),
   handler: function(direction) {
     notify('I am 20px from the top of the window')
   },
@@ -79,10 +79,11 @@ var waypoint = new Waypoint({
 <div id="element-waypoint" class="waypoint">
 {% highlight js %}
 var waypoint = new Waypoint({
-  element: document.getElementById('#element-waypoint'),
+  element: document.getElementById('element-waypoint'),
   handler: function(direction) {
     notify(this.element.id + ' triggers at ' + this.triggerPoint)
-  }
+  },
+  offset: '75%'
 })
 {% endhighlight %}
 </div>
